@@ -30,6 +30,8 @@ CVS code -
 	  Add function init_backup_dir() to handle relative paths
 	  correctly, use get_full_path() to get the canonical pathname,
 	  and use tail() to get the filename if get_full_path() fails.
+	- Port to the Tandem NonStop Kernel (nsr-tandem-nsk). (Tom
+	  Bates; minor tweaks by DLR)
 - files.c:
   add_open_files()
 	- Make the saving of marked status in open_files->file_flags
